# chatpdf

./: Cargo.toml  README.md
api/chatbot/: Cargo.toml
api/chatbot/src/: api_client.rs  error.rs  handlers.rs  main.rs  models.rs  text_splitter.rs  utils.rs
api/chatbot/src/chat/: chat_gpt_35_turbo.rs  mod.rs  vector_db.rs
api/chatbot/src/chat_gpt/: chat_gpt_35_turbo.rs  mod.rs
